--- a/public/about.html
+++ b/public/about.html
@@ -21,16 +21,14 @@
     
       <a href="#news">News</a>
       <a href="#about">About</a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+      </a>
       <input type="text" placeholder="Search..">
 
     </div>
-    <a class="skiplink" href="#map">Go to map</a>
 
-    <div id="map" class="map" tabindex="0"></div>
 
-    <div id="popup" class="ol-popup">
-      <a href="#" id="popup-closer" class="ol-popup-closer"></a>
-    <div id="popup-content"></div>
     <script src="index.js"></script>
   </body>
 </html>
