--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,8 @@
     <div class="topnav" id="myTopnav">
       <img class="logo" src="./images/logo.png" alt="logo" width="140px" height="48px" position="absolute">
       <a href="#home" class="active">Home</a>
-    
+      <a href="about.html">About</a>
       <a href="#news">News</a>
-      <a href="#about">About</a>
       <input type="text" placeholder="Search..">
 
     </div>
@@ -30,7 +29,7 @@
 
     <div id="popup" class="ol-popup">
       <a href="#" id="popup-closer" class="ol-popup-closer"></a>
-    <div id="popup-content"></div>
+    <div id="popup-content" class="test"></div>
     <script src="index.js"></script>
   </body>
 </html>
